# elias_garden_elixir

./: ARCHITECT_COMPLETE_MANAGER_SYSTEM_REVIEW.md  ARCHITECT_CONTENT_BRANDING_SYSTEM_CONSULTATION.md  ARCHITECT_DAEMON_ARCHITECTURE_GUIDANCE.md  ARCHITECT_DISTRIBUTED_INFRASTRUCTURE_PROMPT.md  ARCHITECT_DISTRIBUTED_OS_BLOCKCHAIN_PROGRESS_REPORT.md  ARCHITECT_FINAL_IMPLEMENTATION_ROADMAP_PROMPT.md  ARCHITECT_TIKI_MANAGER_DESIGN.md  ARCHITECT_UPM_URM_CLARIFICATION.md  ELIAS_PROJECT_REORGANIZATION_PLAN.tiki  ELIAS_SYSTEM_TIERS_ARCHITECT_PROMPT.md  LIVE_SYSTEM_DEMONSTRATION.md  PROGRESS_REPORT_ARCHITECT.md  README.md  SYSTEM_STATUS_REPORT.md  TANK_BUILDING_STAGE_2_COMPLETE.md  UFF_CLOUD_TRAINING_ARCHITECT_PROMPT.md  UFF_MODEL_CAPABILITY_ARCHITECT_PROMPT.md  UFF_TRAINING_ARCHITECT_FOLLOWUP_2.md  UFF_TRAINING_ARCHITECT_PROMPT.md  UFF_TRAINING_SYSTEM.md  ULM_IMPLEMENTATION_COMPLETE_SUMMARY.md  backup_sync_setup.sh  cloud_requirements.txt  com.elias.backup.plist  complete_backup.sh  converter  deploy_manager_models_griffith.sh  deploy_sagemaker_training.py  deploy_udm_griffith.sh  gdrive_sync.sh  griffith_sync.sh  kaggle_training_setup.py  kaggle_uff_training.ipynb  mix.exs  phase1_validation_report.exs  requirements.txt  sagemaker_training_script.py  sagemaker_training_setup.py  start_elias_task_manager.sh  test_atomic_components.exs  (+12 more)
tiki-lang/: README.md  pyproject.toml
tiki-lang/examples/: ApeMacs.tiki  elias-architecture.tiki  simple.tiki  test-deep.tiki  uam-arts-skills.tiki
tiki-lang/src/tiki/: __init__.py  core.py  main.py  navigator.py  parser.py  renderer.py
(+292 files in other folders)
