[tool.poetry]
name = "tiki"
version = "0.1.0"
description = "Tiki Hierarchical Specification Language"
authors = ["ELIAS System"]
readme = "README.md"
packages = [{include = "tiki", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anytree = "^2.8.0"
textual = "^0.72.0"
rich = "^13.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
tiki = "tiki.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"